# phone-tasker-mcp

./: .env.example  Dockerfile  TaskerProfiles.prf.xml  pyproject.toml
tasker_mcp/: __init__.py  server.py
